--- a/roles/app/templates/watching-agent.service.j2
+++ b/roles/app/templates/watching-agent.service.j2
@@ -4,15 +4,11 @@ After=network.target
 
 [Service]
 ExecStart=/usr/bin/npm start --prefix {{ app_target_src_dir | default('/app/global') }}
-WorkingDirectory={{ working_dir | default('/app') }}
+WorkingDirectory={{ working_dir | default('/opt/app') }}
 Restart=always
-{# StandardOutput=syslog #}
-{# StandardError=syslog #}
-StandardOutput=journal
-StandardError=journal
-{# User={{ service_user | default('root') }} #}
-{# Environment=NODE_ENV=production #}
+User=root
+Environment=NODE_ENV=production
 
 [Install]
-WantedBy=default.target
-{# WantedBy=multi-user.target #}
+{# WantedBy=default.target #}
+WantedBy=multi-user.target
